--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -37,7 +37,7 @@ jobs:
         python3 -m pip install --user buildozer "cython<3.0"
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    - name: Pre-install Android SDK & Fix Paths
+    - name: Pre-install Android SDK & NDK
       run: |
         export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
         mkdir -p $ANDROID_HOME/cmdline-tools
@@ -48,14 +48,19 @@ jobs:
         unzip -q commandlinetools-linux-9477386_latest.zip
         mv cmdline-tools latest
         
-        # 2. Aceptar licencias e instalar componentes estables
+        # 2. Aceptar licencias e instalar componentes
         yes | ./latest/bin/sdkmanager --sdk_root=$ANDROID_HOME "build-tools;34.0.0" "platforms;android-33" "platform-tools"
         
-        # 3. SOLUCIÓN AL ERROR: Crear enlaces simbólicos para que Buildozer encuentre sdkmanager
+        # 3. Instalar específicamente NDK r25b (el que espera Buildozer)
+        yes | ./latest/bin/sdkmanager --sdk_root=$ANDROID_HOME "ndk;25.2.9519653"
+        
+        # 4. Crear estructura de directorios que Buildozer espera
         mkdir -p $ANDROID_HOME/tools/bin
         ln -s $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager $ANDROID_HOME/tools/bin/sdkmanager
         
-        echo "✅ SDK y enlaces simbólicos configurados correctamente."
+        # 5. IMPORTANTE: Limpiar variables de entorno conflictivas del sistema
+        echo "NDK instalado correctamente en: $ANDROID_HOME/ndk/25.2.9519653"
+        echo "✅ SDK y NDK configurados correctamente."
 
     - name: Configure buildozer.spec
       run: |
@@ -63,10 +68,10 @@ jobs:
           buildozer init
         fi
         
-        # Forzar configuración estable
+        # Configurar buildozer.spec
         sed -i 's/^title = .*/title = Calculadora Educativa/' buildozer.spec
         sed -i 's/^package.name = .*/package.name = calculadoramath/' buildozer.spec
-        sed -i 's/^requirements = .*/requirements = python3,kivy==2.3.0/' buildozer.spec
+        sed -i 's/^requirements = .*/requirements = python3,kivy/' buildozer.spec
         sed -i 's/#android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
         sed -i 's/^android.api = .*/android.api = 33/' buildozer.spec
         
@@ -77,17 +82,29 @@ jobs:
           sed -i '/android.api = 33/a android.build_tools_version = 34.0.0' buildozer.spec
         fi
         
-        # Limpiar rutas conflictivas
+        # FIJAR VERSIÓN DEL NDK (CRÍTICO)
+        if grep -q "android.ndk =" buildozer.spec; then
+          sed -i 's/^android.ndk = .*/android.ndk = 25b/' buildozer.spec
+        else
+          sed -i '/android.build_tools_version = 34.0.0/a android.ndk = 25b' buildozer.spec
+        fi
+        
+        # Eliminar rutas fijas que causan conflictos
         sed -i '/android.ndk_path =/d' buildozer.spec
         sed -i '/android.sdk_path =/d' buildozer.spec
 
     - name: Build APK
       run: |
+        # Limpiar variables del sistema que causan conflicto
+        unset ANDROID_NDK ANDROID_NDK_HOME ANDROID_NDK_ROOT
+        
         export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
-        # Añadir las rutas al PATH para esta ejecución
+        export ANDROID_SDK_ROOT=$ANDROID_HOME
         export PATH=$PATH:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
         
         echo "🏗️ Iniciando compilación..."
+        echo "Usando NDK: $ANDROID_HOME/ndk/25.2.9519653"
+        
         buildozer -v android debug
     
     - name: Upload APK
