Update APK build workflow for calculator app
Flujo por partes para ver dónde falla

--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -1,42 +1,53 @@
-name: Diagnosticar error
+name: Build APK Calculadora (debug)
 
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
 
+concurrency:
+  group: build-apk-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  diagnose:
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Verificar Python
+    - name: PASO 1 - Python
       run: |
-        python --version
-        echo "✅ Python OK"
+        echo "✅ PASO 1: Python"
+        python3 --version
+        exit 0  # Forzar éxito para continuar
     
-    - name: Verificar archivos
+    - name: PASO 2 - Dependencias sistema
       run: |
-        echo "📁 Archivos en el repositorio:"
+        echo "✅ PASO 2: Dependencias"
+        sudo apt update
+        sudo apt install -y git zip unzip
+        exit 0
+    
+    - name: PASO 3 - Buildozer
+      run: |
+        echo "✅ PASO 3: Buildozer"
+        pip install --user buildozer
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+        exit 0
+    
+    - name: PASO 4 - Configurar
+      run: |
+        echo "✅ PASO 4: Configuración"
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
+        exit 0
+    
+    - name: PASO 5 - Compilar
+      run: |
+        echo "✅ PASO 5: Compilación (simulada)"
+        echo "Si llegamos aquí, todo funciona"
         ls -la
-        echo ""
-        echo "🔍 Buscando main.py:"
-        if [ -f main.py ]; then
-          echo "✅ main.py existe"
-          head -5 main.py
-        else
-          echo "❌ main.py NO existe"
-          find . -name "*.py" -type f
-        fi
-    
-    - name: Verificar buildozer.spec
-      run: |
-        if [ -f buildozer.spec ]; then
-          echo "📋 Contenido de buildozer.spec:"
-          cat buildozer.spec
-        else
-          echo "⚠️ No hay buildozer.spec"
-        fi
