--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -1,4 +1,4 @@
-name: Build APK Calculadora (debug)
+name: Build APK Calculadora
 
 on:
   push:
@@ -18,36 +18,116 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: PASO 1 - Python
-      run: |
-        echo "✅ PASO 1: Python"
-        python3 --version
-        exit 0  # Forzar éxito para continuar
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
     
-    - name: PASO 2 - Dependencias sistema
+    - name: Cache Android SDK
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.buildozer
+          ~/.gradle
+        key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+        restore-keys: |
+          ${{ runner.os }}-buildozer-
+    
+    - name: Install system dependencies
       run: |
-        echo "✅ PASO 2: Dependencias"
         sudo apt update
-        sudo apt install -y git zip unzip
-        exit 0
-    
-    - name: PASO 3 - Buildozer
+        sudo apt install -y \
+          git zip unzip openjdk-17-jdk python3-pip python3-dev python3-venv \
+          autoconf libtool pkg-config zlib1g-dev libncurses-dev libncursesw5-dev \
+          cmake libffi-dev libssl-dev wget curl software-properties-common build-essential
+
+    - name: Install buildozer
       run: |
-        echo "✅ PASO 3: Buildozer"
-        pip install --user buildozer
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --user buildozer "cython<3.0"
         echo "$HOME/.local/bin" >> $GITHUB_PATH
-        exit 0
-    
-    - name: PASO 4 - Configurar
+
+    - name: 🔧 Configurar buildozer.spec
       run: |
-        echo "✅ PASO 4: Configuración"
+        # Si no existe buildozer.spec, crearlo
         if [ ! -f buildozer.spec ]; then
           buildozer init
         fi
-        exit 0
-    
-    - name: PASO 5 - Compilar
+        
+        # Configurar valores básicos (usando sed para compatibilidad)
+        sed -i 's/^title = .*/title = Calculadora Matemática Pro/' buildozer.spec
+        sed -i 's/^package.name = .*/package.name = calculadoramath/' buildozer.spec
+        sed -i 's/^package.domain = .*/package.domain = org.palmace/' buildozer.spec
+        sed -i 's/^requirements = .*/requirements = python3,kivy==2.3.0,cython/' buildozer.spec
+        
+        # Configuración Android
+        sed -i 's/^android.api = .*/android.api = 33/' buildozer.spec
+        sed -i 's/^android.minapi = .*/android.minapi = 21/' buildozer.spec
+        sed -i 's/^android.sdk = .*/android.sdk = 33/' buildozer.spec
+        sed -i 's/^android.ndk = .*/android.ndk = 25b/' buildozer.spec
+        sed -i 's/^android.archs = .*/android.archs = arm64-v8a, armeabi-v7a/' buildozer.spec
+        sed -i 's/#android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
+        
+        # Mostrar configuración
+        echo "✅ buildozer.spec configurado:"
+        grep -E "title|package|requirements|android" buildozer.spec
+
+    - name: 🏗️ Compilar APK
       run: |
-        echo "✅ PASO 5: Compilación (simulada)"
-        echo "Si llegamos aquí, todo funciona"
-        ls -la
+        echo "🏗️ INICIANDO COMPILACIÓN (puede tomar 20-40 minutos)..."
+        echo "Fecha inicio: $(date)"
+        
+        # Configurar variables
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        export ANDROID_SDK_ROOT=$ANDROID_HOME
+        export PATH=$PATH:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools
+        
+        # Compilar
+        buildozer android debug 2>&1 | tee build.log
+        
+        echo "Fecha fin: $(date)"
+
+    - name: 🔍 Buscar APK
+      id: find-apk
+      run: |
+        echo "🔍 Buscando APK generado..."
+        
+        # Buscar en ubicaciones comunes
+        find . -name "*.apk" -type f > apk_list.txt
+        find ~/.buildozer -name "*.apk" -type f >> apk_list.txt 2>/dev/null
+        
+        if [ -s apk_list.txt ]; then
+          echo "✅ APK encontrado:"
+          cat apk_list.txt
+          
+          # Crear directorio y copiar
+          mkdir -p apk_output
+          while IFS= read -r apk; do
+            if [ -f "$apk" ]; then
+              cp "$apk" apk_output/ 2>/dev/null || true
+            fi
+          done < apk_list.txt
+          
+          echo "APK_FOUND=true" >> $GITHUB_ENV
+        else
+          echo "❌ No se encontró APK"
+          echo "Contenido de bin/ si existe:"
+          ls -la bin/ 2>/dev/null || echo "bin/ no existe"
+          echo "APK_FOUND=false" >> $GITHUB_ENV
+        fi
+
+    - name: 📦 Subir APK
+      if: env.APK_FOUND == 'true'
+      uses: actions/upload-artifact@v4
+      with:
+        name: Calculadora-APK
+        path: apk_output/
+        retention-days: 30
+
+    - name: 📋 Subir log
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-log
+        path: build.log
+        retention-days: 7
